@@ -798,6 +798,26 @@ name|server
 operator|.
 name|namenode
 operator|.
+name|ha
+operator|.
+name|HAContext
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|namenode
+operator|.
 name|metrics
 operator|.
 name|NameNodeMetrics
@@ -1298,6 +1318,12 @@ name|long
 name|scheduledReplicationBlocksCount
 init|=
 literal|0L
+decl_stmt|;
+comment|/** flag indicating whether replication queues have been initialized */
+DECL|field|initializedReplQueues
+specifier|private
+name|boolean
+name|initializedReplQueues
 decl_stmt|;
 DECL|field|excessBlocksCount
 specifier|private
@@ -5625,8 +5651,6 @@ block|{
 if|if
 condition|(
 operator|!
-name|namesystem
-operator|.
 name|isPopulatingReplQueues
 argument_list|()
 condition|)
@@ -5658,8 +5682,6 @@ block|{
 if|if
 condition|(
 operator|!
-name|namesystem
-operator|.
 name|isPopulatingReplQueues
 argument_list|()
 condition|)
@@ -5762,8 +5784,6 @@ block|{
 if|if
 condition|(
 operator|!
-name|namesystem
-operator|.
 name|isPopulatingReplQueues
 argument_list|()
 condition|)
@@ -6110,8 +6130,6 @@ block|}
 elseif|else
 if|if
 condition|(
-name|namesystem
-operator|.
 name|isPopulatingReplQueues
 argument_list|()
 condition|)
@@ -11666,8 +11684,6 @@ operator|.
 name|isInStartupSafeMode
 argument_list|()
 operator|||
-name|namesystem
-operator|.
 name|isPopulatingReplQueues
 argument_list|()
 condition|)
@@ -12092,8 +12108,6 @@ comment|// do not try to handle over/under-replicated blocks during first safe m
 if|if
 condition|(
 operator|!
-name|namesystem
-operator|.
 name|isPopulatingReplQueues
 argument_list|()
 condition|)
@@ -15450,8 +15464,6 @@ block|{
 if|if
 condition|(
 operator|!
-name|namesystem
-operator|.
 name|isPopulatingReplQueues
 argument_list|()
 condition|)
@@ -15850,8 +15862,6 @@ block|{
 if|if
 condition|(
 operator|!
-name|namesystem
-operator|.
 name|isPopulatingReplQueues
 argument_list|()
 condition|)
@@ -16897,8 +16907,6 @@ block|{
 comment|// Process replication work only when active NN is out of safe mode.
 if|if
 condition|(
-name|namesystem
-operator|.
 name|isPopulatingReplQueues
 argument_list|()
 condition|)
@@ -17320,6 +17328,106 @@ name|getDatanodeStatistics
 argument_list|()
 operator|.
 name|getStorageTypeStats
+argument_list|()
+return|;
+block|}
+comment|/**    * Initialize replication queues.    */
+DECL|method|initializeReplQueues ()
+specifier|public
+name|void
+name|initializeReplQueues
+parameter_list|()
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"initializing replication queues"
+argument_list|)
+expr_stmt|;
+name|processMisReplicatedBlocks
+argument_list|()
+expr_stmt|;
+name|initializedReplQueues
+operator|=
+literal|true
+expr_stmt|;
+block|}
+comment|/**    * Check if replication queues are to be populated    * @return true when node is HAState.Active and not in the very first safemode    */
+DECL|method|isPopulatingReplQueues ()
+specifier|public
+name|boolean
+name|isPopulatingReplQueues
+parameter_list|()
+block|{
+if|if
+condition|(
+operator|!
+name|shouldPopulateReplQueues
+argument_list|()
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+return|return
+name|initializedReplQueues
+return|;
+block|}
+DECL|method|setInitializedReplQueues (boolean v)
+specifier|public
+name|void
+name|setInitializedReplQueues
+parameter_list|(
+name|boolean
+name|v
+parameter_list|)
+block|{
+name|this
+operator|.
+name|initializedReplQueues
+operator|=
+name|v
+expr_stmt|;
+block|}
+DECL|method|shouldPopulateReplQueues ()
+specifier|public
+name|boolean
+name|shouldPopulateReplQueues
+parameter_list|()
+block|{
+name|HAContext
+name|haContext
+init|=
+name|namesystem
+operator|.
+name|getHAContext
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|haContext
+operator|==
+literal|null
+operator|||
+name|haContext
+operator|.
+name|getState
+argument_list|()
+operator|==
+literal|null
+condition|)
+return|return
+literal|false
+return|;
+return|return
+name|haContext
+operator|.
+name|getState
+argument_list|()
+operator|.
+name|shouldPopulateReplQueues
 argument_list|()
 return|;
 block|}
