@@ -7563,19 +7563,6 @@ name|when
 argument_list|(
 name|mockNS
 operator|.
-name|isPopulatingReplQueues
-argument_list|()
-argument_list|)
-operator|.
-name|thenReturn
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
-name|when
-argument_list|(
-name|mockNS
-operator|.
 name|hasWriteLock
 argument_list|()
 argument_list|)
@@ -7864,19 +7851,6 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
-name|when
-argument_list|(
-name|mockNS
-operator|.
-name|isPopulatingReplQueues
-argument_list|()
-argument_list|)
-operator|.
-name|thenReturn
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
 name|when
 argument_list|(
 name|mockNS
@@ -8365,19 +8339,6 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
-name|when
-argument_list|(
-name|mockNS
-operator|.
-name|isPopulatingReplQueues
-argument_list|()
-argument_list|)
-operator|.
-name|thenReturn
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
 name|when
 argument_list|(
 name|mockNS
