@@ -186,6 +186,24 @@ name|hdfs
 operator|.
 name|server
 operator|.
+name|blockmanagement
+operator|.
+name|BlockManager
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
 name|common
 operator|.
 name|HdfsServerConstants
@@ -769,6 +787,25 @@ argument_list|(
 name|fsNamesystem
 argument_list|)
 decl_stmt|;
+name|BlockManager
+name|bm
+init|=
+name|fsn
+operator|.
+name|getBlockManager
+argument_list|()
+decl_stmt|;
+name|Whitebox
+operator|.
+name|setInternalState
+argument_list|(
+name|bm
+argument_list|,
+literal|"namesystem"
+argument_list|,
+name|fsn
+argument_list|)
+expr_stmt|;
 comment|//Make shouldPopulaeReplQueues return true
 name|HAContext
 name|haContext
@@ -824,14 +861,18 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
-name|Whitebox
+name|Mockito
 operator|.
-name|setInternalState
+name|when
 argument_list|(
 name|fsn
-argument_list|,
-literal|"haContext"
-argument_list|,
+operator|.
+name|getHAContext
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
 name|haContext
 argument_list|)
 expr_stmt|;
@@ -871,7 +912,7 @@ operator|+
 literal|"safemode"
 argument_list|,
 operator|!
-name|fsn
+name|bm
 operator|.
 name|isPopulatingReplQueues
 argument_list|()
@@ -899,7 +940,7 @@ literal|"Replication queues weren't being populated even after leaving "
 operator|+
 literal|"safemode"
 argument_list|,
-name|fsn
+name|bm
 operator|.
 name|isPopulatingReplQueues
 argument_list|()
@@ -928,7 +969,7 @@ literal|"Replication queues weren't being populated after entering "
 operator|+
 literal|"safemode 2nd time"
 argument_list|,
-name|fsn
+name|bm
 operator|.
 name|isPopulatingReplQueues
 argument_list|()
